tests/.nts/error/links_syntax_error3.nts
.chipsets:
input  in
output out

.links:
in1 out:1